refactor: Refactor core and add fs/path packages, archive old code
Moved core features and helpers to an archive directory, introduced new @hmpact/fs and @hmpact/path packages, and updated references to use these new packages. Updated CLI and core runner to use new helpers and logger, and improved terminal and package configuration. Incremented package versions and added new scripts for demo purposes.

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hmpact",
   "type": "module",
-  "version": "0.0.1-beta.1",
+  "version": "0.0.1-beta.2",
   "description": "",
   "author": "toakiryu <toakiryu@gmail.com>",
   "license": "MIT",
@@ -19,6 +19,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "demo": "node ./bin/hmpact.mjs",
     "typecheck": "tsc --noEmit",
     "t:pack": "pnpm pack",
     "lint": "eslint",
