--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "w:typecheck": "pnpm -r run typecheck",
     "w:lint": "pnpm -r run lint",
     "aliasify": "pnpx tsx ./.scripts/aliasify-imports.ts",
-    "format": "pnpm aliasify && eslint --fix && prettier . --write"
+    "format": "pnpm aliasify && eslint --fix && prettier . --write",
+    "demo": "node ./packages/cli/bin/hmpact.mjs"
   },
   "devDependencies": {
     "@types/glob": "^9.0.0",
@@ -37,5 +38,5 @@
     "glob": "^13.0.0",
     "typescript": "^5.9.3"
   },
-  "packageManager": "pnpm@10.26.0"
+  "packageManager": "pnpm@10.28.0"
 }
