--- a/packages/fs/package.json
+++ b/packages/fs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hmpact/logger",
+  "name": "@hmpact/fs",
   "type": "module",
   "version": "0.0.1-beta.2",
   "description": "",
@@ -12,7 +12,7 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/toakiryu/hmpact.git",
-    "directory": "packages/logger"
+    "directory": "packages/fs"
   },
   "bugs": {
     "url": "https://github.com/toakiryu/hmpact/issues"
@@ -38,10 +38,8 @@
     }
   },
   "dependencies": {
-    "chalk": "^5.6.2",
-    "figlet": "^1.9.4",
-    "gradient-string": "^3.0.0",
-    "ora": "^9.0.0"
+    "jsonc-parser": "^3.3.1",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
