--- a/packages/path/package.json
+++ b/packages/path/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hmpact/logger",
+  "name": "@hmpact/path",
   "type": "module",
   "version": "0.0.1-beta.2",
   "description": "",
@@ -12,7 +12,7 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/toakiryu/hmpact.git",
-    "directory": "packages/logger"
+    "directory": "packages/path"
   },
   "bugs": {
     "url": "https://github.com/toakiryu/hmpact/issues"
@@ -37,12 +37,7 @@
       "import": "./dist/index.mjs"
     }
   },
-  "dependencies": {
-    "chalk": "^5.6.2",
-    "figlet": "^1.9.4",
-    "gradient-string": "^3.0.0",
-    "ora": "^9.0.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/node": "^24.10.1",
     "esbuild": "^0.27.1",
