--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -19,8 +19,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "pnpm build:info && node ../../.scripts/build-esbuild.js",
-    "build:info": "node ../../.scripts/build-info.js",
+    "build": "node ../../.scripts/build-esbuild.js",
     "typecheck": "tsc --noEmit",
     "t:pack": "pnpm pack",
     "prepack": "pnpm build",
@@ -43,6 +42,8 @@
     "@hmpact/logger": "workspace:^",
     "@hmpact/fs": "workspace:^",
     "@hmpact/path": "workspace:^",
+    "@hmpact/cache": "workspace:^",
+    "@hmpact/devtools": "workspace:^",
     "cacache": "^20.0.3",
     "chalk": "^5.6.2",
     "commander": "^14.0.2",
