--- a/packages/fs/package.json
+++ b/packages/fs/package.json
@@ -6,8 +6,7 @@
   "author": "toakiryu <toakiryu@gmail.com>",
   "license": "MIT",
   "keywords": [
-    "cli",
-    "tool"
+    "filesystem"
   ],
   "repository": {
     "type": "git",
