refactor: Refactor to use path aliases and improve error handling
Refactored import paths across packages to use TypeScript path aliases (e.g., @/base/*, @/utils/*) for better maintainability. Enhanced error handling in cache and fs modules, distinguishing file-not-found from other errors. Updated .gitignore files to use a Windows/node/git template. Added jsonc-parser as a dependency and improved tsconfig.json path settings. Minor documentation and code cleanup included.

--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "glob": "^13.0.0",
     "typescript": "^5.9.3"
   },
-  "packageManager": "pnpm@10.28.0"
+  "packageManager": "pnpm@10.28.0",
+  "dependencies": {
+    "jsonc-parser": "^3.3.1"
+  }
 }
