--- a/packages/devtools/tsconfig.json
+++ b/packages/devtools/tsconfig.json
@@ -17,9 +17,8 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@/features/*": ["./src/features/*"],
-      "~/*": ["./*"]
+      "@/features/*": ["./src/features/*"]
     }
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*"]
 }
