--- a/packages/fs/tsconfig.json
+++ b/packages/fs/tsconfig.json
@@ -17,9 +17,8 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@/utils/*": ["./src/utils/*"],
-      "~/*": ["./*"]
+      "@/utils/*": ["./src/utils/*"]
     }
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*"]
 }
