--- a/package.json
+++ b/package.json
@@ -36,10 +36,9 @@
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
     "glob": "^13.0.0",
+    "jsonc-parser": "^3.3.1",
+    "prettier": "^3.7.4",
     "typescript": "^5.9.3"
   },
-  "packageManager": "pnpm@10.28.0",
-  "dependencies": {
-    "jsonc-parser": "^3.3.1"
-  }
+  "packageManager": "pnpm@10.28.0"
 }
