--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -26,7 +26,5 @@
     }
   },
   "include": ["src/**/*"],
-  "references": [
-    { "path": "../logger" }
-  ]
+  "references": [{ "path": "../logger" }]
 }
