--- a/packages/path/tsconfig.json
+++ b/packages/path/tsconfig.json
@@ -14,7 +14,7 @@
     "rootDir": "./src",
     "outDir": "./dist",
     "esModuleInterop": true,
-    "skipLibCheck": true,
+    "skipLibCheck": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*"]
 }
