chore: Add publish provenance to package configs
Added `publishConfig.provenance: true` to all package.json files to enable provenance metadata on publish. Also performed minor code cleanup in aliasify-imports.ts and removed an unnecessary blank line in helper.ts.

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -17,6 +17,9 @@
   "bugs": {
     "url": "https://github.com/toakiryu/hmpact/issues"
   },
+  "publishConfig": {
+    "provenance": true
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "demo": "node ./bin/hmpact.mjs",
