--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -17,6 +17,9 @@
   "bugs": {
     "url": "https://github.com/toakiryu/hmpact/issues"
   },
+  "publishConfig": {
+    "provenance": true
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "pnpm build:info && node ../../.scripts/build-esbuild.js --entries=./src/index.ts,./src/features/build-info/index.ts",
