--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "prettier": "^3.7.4",
     "typescript": "^5.9.3"
   },
-  "packageManager": "pnpm@10.28.0"
+  "packageManager": "pnpm@10.28.0",
+  "dependencies": {
+    "zod": "^4.3.5"
+  }
 }
