refactor: Refactor user-config schema and update config loading
Moved user config schema from core to user-config package and updated import paths accordingly. Refactored config loading utility to use the new schema location and improved error handling. Also updated tsconfig path mapping and made minor adjustments to ESLint config.

--- a/packages/user-config/tsconfig.json
+++ b/packages/user-config/tsconfig.json
@@ -17,7 +17,7 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@/utils/*": ["./src/utils/*"]
+      "@/*": ["./src/*"]
     }
   },
   "include": ["src/**/*"]
