--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "w:pack": "pnpm -r run t:pack",
     "w:typecheck": "pnpm -r run typecheck",
     "w:lint": "pnpm -r run lint",
-    "aliasify": "pnpx tsx ./.scripts/aliasify-imports.ts",
-    "format": "pnpm aliasify && eslint --fix && prettier . --write",
+    "aliasify": "nlx tsx ./.scripts/aliasify-imports.ts",
+    "format": "nr aliasify && eslint --fix && prettier . --write",
     "demo": "node ./packages/cli/bin/hmpact.mjs"
   },
   "devDependencies": {
@@ -42,6 +42,6 @@
   },
   "packageManager": "pnpm@10.28.0",
   "dependencies": {
-    "zod": "^4.3.5"
+    "enquirer": "^2.4.1"
   }
 }
