--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -42,15 +42,17 @@
     }
   },
   "dependencies": {
-    "@hmpact/logger": "workspace:^",
-    "@hmpact/fs": "workspace:^",
-    "@hmpact/path": "workspace:^",
     "@hmpact/cache": "workspace:^",
     "@hmpact/devtools": "workspace:^",
+    "@hmpact/fs": "workspace:^",
+    "@hmpact/logger": "workspace:^",
+    "@hmpact/path": "workspace:^",
+    "@hmpact/user-config": "workspace:^",
     "cacache": "^20.0.3",
     "chalk": "^5.6.2",
     "commander": "^14.0.2",
     "deepmerge": "^4.3.1",
+    "enquirer": "^2.4.1",
     "figlet": "^1.9.4",
     "gradient-string": "^3.0.0",
     "isomorphic-unfetch": "^4.0.2",
